Fixed Translation key missing

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,5 +1,6 @@
 {
     "DBHealth": {
-        "Mysqlstatus": "Mysql status"
+        "Mysqlstatus": "Mysql status",
+        "PerformanceTuning": "Performance Tuning"
     }
 }
